--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "!",
-    "token": "your-token-goes-here"
+    "token": "NDQ0Njk4MjY2MjYxNjUxNDU2.DdftIw.z4WhocPR_AdRABn4cVjge-xnOVY"
 }
