--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonfile": "^4.0.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
+    "mysqljs": "0.0.2-security",
     "sync-mysql": "^3.0.1"
   }
 }
